--- a/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
+++ b/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Appointment timeslots that are not showing up"
+title: "Appointment timeslots that should show but they are not or should not showing but they should be "
 description: "Appointment timeslots may not display when they should or appear when they shouldn't."
 ---
+## Appointment timeslots that should show but they are not / should not showing but they should be 
 
 Note:  All-day events from Google are defaulted to FREE as the availability
 
-[Video Placeholder ]
+[Video Placeholder https://www.loom.com/share/b6fbe2fd58ab492a8d698ac80bbbafe2?sid=7baf3be9-e636-4710-9bd7-08bd9a92689a]
