--- a/Calendar/calendar-payments.mdx
+++ b/Calendar/calendar-payments.mdx
@@ -1,11 +1,13 @@
+
 ---
 title: "Calendar Payments "
 description: "Calendar Payments allows the location to receive payments when a client or customer books for a certain calendar appointment."
----
 
+---
+## Calendar Payments 
 Calendar Payments are now possible when booking an appointment. It allows the location to receive payments when a client or customer books for a certain calendar appointment. This is very useful, especially for businesses that require a certain payment to book an appointment slot.
 
-### **Available payment providers and how to add them**
+### Available payment providers and how to add them
 
 1. Payments in calendars are supported through two payment gateways, namely  **Stripe**  and  [**Authorize.net**]
  ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155006886896/original/vIBjTVw-i5OvT9_AkjSgtIxIw5ovfYxp5Q.png?1693924475)
@@ -19,9 +21,8 @@ Calendar Payments are now possible when booking an appointment. It allows the lo
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155006892294/original/kRypy__wHTX_ArB2cnIlpjqpez5u1oLU4g.png?1693926783)
 
-5. Edit (by clicking on the three dots) an existing calendar or Create a New Calendar (Advanced Settings). Under Forms & Payments you will see a toggle to "Accept Payments".
-
-  
+5. Edit (by clicking on the three dots) an existing calendar or Create a New Calendar (Advanced Settings). Under Forms & Payments, you will see a toggle to "Accept Payments".
+ 
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155006884338/original/LA1hsyKKkl0YN5iX6A3u5k-Fam-bVB65QA.png?1693923486)
 
