--- a/Calendar/calendar-sync-option-explained.mdx
+++ b/Calendar/calendar-sync-option-explained.mdx
@@ -1,11 +1,15 @@
+
 ---
-title: "Calendar Sync Option explained"
-description: "The updated sync option found in the Settings->Profile page afte integrating the Google account."
+title: "Calendar Sync Option Explained"
+description: "The updated sync option found in the Settings->Profile page after integrating the Google account."
+
 ---
 
-We updated it so that the sync option will be found in the Settings->Profile page after you integrate the Google account. You will need to log in as the user and go to the Settings -> Integrations page to connect with the Google account. 
+## Calendar Sync Option Explained 
 
-After that is done, you can connect to the Google account under the Profile tab in the Calendar Configuration section.
+### For Group calendar
+
+We updated it so that the sync option will be found in the Settings->Profile page after you integrate the Google account. You will need to log in as the user and go to the Settings -> Integrations page to connect with the Google account. After that is done, you can connect to the Google account under the Profile tab in the Calendar Configuration section.
 
 For the sync option here, it would be the same idea as what we had before. Allow contact creation means that we will create a contact + appointment in Monstro for the guests we found in the Google events.
 
@@ -15,21 +19,21 @@ After you select the default calendar, the Allow Trigger option will show up and
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48098784224/original/mvSbY_fxdNHCBuNUeETgGsVjjJCDFBq4Cw.png?1618603086)
   
-## For unassigned calendar
+### For unassigned calendar
 
 [Video Placeholder]
 
-All Monstro appointments will still be pushed to the linked Google calendar no matter what the sync option is.
+#### All HL appointments will still be pushed to the linked Google calendar no matter what the sync option is.
 
-The behavior for two-way sync and disable trigger would pull the guests in the Google events and add them to Monstro.
+#### The behavior for two-way sync and disable trigger would pull the guests in the Google events and add them to Monstro.
 
-Smart sync would pull the guests in the Google events and add them to Monstro if we found that they are already a lead with the same email in Monstro.
+#### Smart sync would pull the guests in the Google events and add them to Monstro if we found that they are already a lead with the same email in Monstro.
 
-## Calendar Sync Options:
+### Calendar Sync Options:
 
 **One way**:
 
-All events from Google Calendar will be shown in grey. It will not add whoever is invited to the Google event to Monstro. But will still sync the Appointments from to the Google calendar and block the timeslot pulled from Google.
+All events from Google Calendar will be shown in grey. It will not add whoever is invited to the Google event to Monstro. But will still sync the Appointments from HL to the Google calendar and block the timeslot pulled from Google.
 
 **Two way**:
 
