--- a/Calendar/how-to-configure-staff-member-selection-in-round-robin-calendars.mdx
+++ b/Calendar/how-to-configure-staff-member-selection-in-round-robin-calendars.mdx
@@ -2,6 +2,7 @@
 title: " How to configure Staff Member selection in Round Robin Calendars?"
 description: "This function lets your clients select their preferred staff member when making appointments, offering a personalized touch to their booking experience."
 ---
+## How to configure Staff Member selection in Round Robin Calendars? 
 
 Our booking widget includes a popular feature: Staff Member Selection. This function lets your clients select their preferred staff member when making appointments, offering a personalized touch to their booking experience.
 
