--- a/Calendar/how-to-create-round-robin-calendar.mdx
+++ b/Calendar/how-to-create-round-robin-calendar.mdx
@@ -1,9 +1,10 @@
+
 ---
 title: "How to create a Round Robin calendar"
 description: "Empowering the teams with Round Robin events, enabling invitees to choose a time with any available team member"
 ---
 
-
+## How to create a Round Robin calendar 
 Empower your team with Round Robin events, offering flexibility for invitees to choose a time with any available team member. Ideal for:
 
 1. Linking leads with sales reps for intro calls and demos.
@@ -14,19 +15,18 @@ Empower your team with Round Robin events, offering flexibility for invitees to 
 
 4. Pairing candidates with recruiters for phone screenings.
 
-
-### **Step 1: Setting up a Round Robin event:**
+**Step 1: Setting up a Round Robin event:**
 
 -   To create a Round Robin event, click on the Create Calendar icon on the Calendar Settings page and select the "Round Robin" option
     ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155013390542/original/bmN8vGI1veMNaM4x4CPLo8FmKKQb7mE2KA.png?1700715549)
 
-### **Step 2: Adding Team Members**
+**Step 2: Adding Team Members**
 
 -   You can add multiple team members in the Round Robin calendars and distribute the appointments that would be scheduled amongst them using the distribution logic.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155013391152/original/uzf4TSzdFqFrHnkMAKc4WBTrOdDlydgrTQ.png?1700716366)
 
-### **Step 3: Distribution Logic**
+**Step 3: Distribution Logic**
 
 -   **You can configure Round Robin automated meeting assignments in two ways:**
     
