--- a/Calendar/show-seats-per-slot-for-class-booking-on-the-booking-widget.mdx
+++ b/Calendar/show-seats-per-slot-for-class-booking-on-the-booking-widget.mdx
@@ -1,15 +1,18 @@
+
 ---
 title: "Show seats per slot for Class booking on the booking widget"
 description: "This control enhances booking flexibility by informing individuals about seat availability before reservation."
+
 ---
+## Show seats per slot for Class booking on the booking widget 
 
 Users can decide whether they want to show the total available seats per slot on the Class Booking calendar widget or not. This control allows for greater flexibility in the booking process and empowers individuals booking appointments to be informed about seat availability before making a reservation.
 
-## Introduction to showing seats per slot
+### Introduction to showing seats per slot
 
 This feature aims to provide users with greater control over the calendar booking widget. Now, users have the option to show or hide the total available seats per slot for Class booking calendars, putting them in charge of how this information is presented.
 
-## Enable "Show seats per slot"
+### Enable "Show seats per slot"
 
 To enable the display of seats per slot for any class booking calendar, follow these steps:
 
@@ -25,7 +28,7 @@ To enable the display of seats per slot for any class booking calendar, follow t
 Once this is done, the Calendar booking widget will automatically show the available seats per slot.
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155007656884/original/fxwMpj6Wpz4C43rYIcgIezC22WuSLCNQWQ.png?1694689962)
 
-## Important information
+### Important information
 
 -   This feature is exclusively available for Class booking calendars and Neo widgets.
 -   The seats per slot will only be displayed on the booking widget if the "Seats per class" setting in your calendar settings is set to a value greater than 1
