--- a/Contacts/do-not-disturb-dnd-split.mdx
+++ b/Contacts/do-not-disturb-dnd-split.mdx
@@ -1,6 +1,6 @@
 ---
-title: "DoNotDisturb (DND Split)"
-description: "Set individual channel-specific Do Not Disturb (DND) preferences after integrating them with the system."
+title: "DoNotDisturb DND Split"
+description: "Set individual channel-specific Do Not Disturb preferences after integrating them with the system."
 ---
 
 ## DoNotDisturb (DND Split)
