--- a/Contacts/how-to-restore-deleted-contacts.mdx
+++ b/Contacts/how-to-restore-deleted-contacts.mdx
@@ -1,28 +1,26 @@
+
 ---
 title: "How to restore deleted contacts"
 description: "Restore deleted contacts includes opportunities, notes, tasks, appointments, conversations, campaigns/workflows."
 ---
 
-## How to restore deleted contacts
+### How to restore deleted contacts
 
-
-## 1. Click on Contacts
+**1. Click on Contacts**
 
 ![Click on Contacts](https://images.tango.us/public/edited_image_625ef275-5b7f-4de6-9fc9-d38637383543?crop=focalpoint&fit=crop&fp-x=0.4794&fp-y=0.4916&fp-z=1.0428&w=1200&ar=1920%3A907)
 
-## 2. Click on Bulk Actions
+**2. Click on Bulk Actions**
 
 ![Click on Bulk Actions](https://images.tango.us/public/edited_image_26844722-205c-4001-bba2-32b70aa66e7f?crop=focalpoint&fit=crop&fp-x=0.3652&fp-y=0.2536&fp-z=1.9313&w=1200&ar=1920%3A907)
 
-## 3. Click on dropdown trigger
+**3. Click on the dropdown trigger**
 
 ![Click on dropdown trigger](https://images.tango.us/public/edited_image_03cee06c-af70-497c-a77d-326c8148517e?crop=focalpoint&fit=crop&fp-x=0.5038&fp-y=0.4987&fp-z=1.0075&w=1200&ar=1920%3A907)
 
-
-## 4. Click on Restore
+**4. Click on Restore**
 
 This will restore the  contact(s):
-
 -   **Opportunities**
 -   **Notes**
 -   **Tasks**
@@ -31,7 +29,3 @@ This will restore the  contact(s):
 -   **Campaigns/Workflows**
 
 ![Click on Restore](https://images.tango.us/public/edited_image_4cef99c0-8699-4d82-97a9-06bd132a6bb6?crop=focalpoint&fit=crop&fp-x=0.5595&fp-y=0.4840&fp-z=1.1319&w=1200&ar=1920%3A907)
-
-#   
-
-###
