--- a/Emails/standard-triggers-contact-tag.mdx
+++ b/Emails/standard-triggers-contact-tag.mdx
@@ -1,10 +1,12 @@
+
 ---
 title: "Standard Triggers - Contact Tag"
 description: "Explore additional configurations to receive email copies through a Forwarding Address or BCC, with elaboration on Reply Tracking."
----
-# Standard Triggers - Contact Tag 
 
-## What does the Contact Tag Workflow trigger do?
+---
+## Standard Triggers - Contact Tag 
+
+### What does the Contact Tag Workflow trigger do?
 
 The contact tag workflow trigger step checks if any tag is added to a contact or removed from a contact.  
 
@@ -14,7 +16,7 @@ You can specify via Filters if you want it to get fired off by a tag getting add
   
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48252865701/original/Wz2eN9U-q9b5FwqGLoyJ_xRol2mbx2MNGw.png?1663948521)
 
-## What can cause a tag to get added or removed?
+### What can cause a tag to get added or removed?
 
 Tags can get added or removed by the following means, and hence fire off a workflow with the trigger step set to Contact Tag with a filter for Tag Added or Tag Removed in case of removals:  
 
