--- a/Emails/what-is-email-bounce-suspension-and-how-to-avoid-it.mdx
+++ b/Emails/what-is-email-bounce-suspension-and-how-to-avoid-it.mdx
@@ -1,8 +1,10 @@
+
 ---
 title: "What is email Bounce Suspension, and how to avoid it"
 description: "Suspend email sending if the hard bounce rate is high; providers and anti-spam networks monitor bounce rates, impacting your deliverability."
+
 ---
-# What is email Bounce Suspension, and how to avoid it 
+## What is email Bounce Suspension, and how to avoid it? 
 
 Email sending will be suspended for having a high hard bounce rate. Email providers and anti-spam networks monitor bounce rates for every email you send and use that information to suspend email sending for your accounts with high bounce rates. High bounce rates will impact your email deliverability.
   
@@ -12,7 +14,7 @@ In this article, you will learn about
 2.  Causes an account suspension  
 3.  Fix the hard bounce and activate the account
 
-## What are bounces?
+### What are bounces?
 
 A bounce occurs when an email is not delivered or rejected by the recipient's email provider.
 
@@ -22,7 +24,7 @@ There are two types of bounces.
 2.  **A soft**  bounce is a temporary failure, and some more reasons, like the recipient servers being down or the mailbox being full.
 
 
-## What causes an account suspension
+### What causes an account suspension?
 
 We have thresholds in place to monitor bounce rates, and if a Bounce rate exceeds the industry threshold (below 5%), we temporarily suspend the email sending for the account.
 
@@ -34,30 +36,30 @@ During the email-sending suspension, only email-sending will be disabled. All ot
 
 A temporary block of 12 hours will be enforced. Users can quickly resume sending by enabling email validation. If this happens for the third time in seven days, email sending will be blocked permanently until the email validation feature is enabled.
 
-## What should you do now?
+### What should you do now?
 
-When a sub-account/ location is suspended, you will receive an email to the  sub-account/ location  accounts email address to do the below step:
+When a sub-account/ location is suspended, you will receive an email to the  sub-account/ location account email address to do the below step:
 
 1.  Cleanse your contacts with  Email Validation Service to eliminate addresses that are invalid/non-existent and ultimately bounce.
 2.  If the sub-account is a client, please discuss this with your client and advise them not to send bulk communication or cold email campaigns until this issue is resolved.
 
 Not following the recommended remediation measures may result in restrictions on email capabilities for this location. Please note if your Complaint, Unsubscribe, and/or Hard Bounce rates continue to deteriorate this sub-account may get blocked.
 
-## How to prevent future account suspension:
+### How to prevent future account suspension:
 
 The location should be able to send emails 24 hours after you receive the non-compliant email notification.
 
-Right now, we don't have any way to easily locate the remaining people that didn’t get the email before it was blocked.
+Right now, we don't have any way to easily locate the remaining people who didn’t get the email before it was blocked.
 
-The only workaround would be to export the email statistics and then reupload to tag the leads, then use smart list to filter to the leads without that tag to re-send again:
+The only workaround would be to export the email statistics and then reupload to tag the leads, then use the smart list to filter to the leads without that tag to re-send again:
 
 If you don't want to receive these emails, please change the user role to a  **user**  instead of an  **agency admin**.
 
 ![](https://i.ibb.co/TckmLt0/2023-2-2-11-38-11.gif)
 
-## Email Best Practices:
+### Email Best Practices:
 
-### 1.  Email Validation 
+**1.  Email Validation**
 
 Since we are not showing any reporting on which contacts are bounced. If those contacts were uploaded from previous options, we highly recommend  **validating all existing contacts**  before sending them.
 
@@ -67,25 +69,25 @@ The bounce emails will be marked as invalid emails, so you don't need to tag the
 
 [GIF Placeholder https://i.ibb.co/yqmqcQH/2023-2-2-9-36-15.gif]
 
-### 2. Set up your dedicated domain
+**2. Set up your dedicated domain**
 
-### 3. Configure the sender email that matches the dedicated domain you set up
+**3. Configure the sender email that matches the dedicated domain you set up**
 
 - Masking Sender Emails - From Name & Address
 - Email Authentication - DMARC
 
 So if you set up replies.yourcompany.com, you can send from sender_name@company.com
 
-### 4. Schedule the emails in little batches
+**4. Schedule the emails in little batches**
 
 - Bulk Actions For Contacts & Smart Lists
 
-### 5. Set-up double opt-in
+**5. Set-up double opt-in**
 
-**To set up double opt-in for future setup, please include a checkbox to ensure the lead gives consent when filling out the form if that's where the leads opt-in:**
+***To set up double opt-in for future setup, please include a checkbox to ensure the lead gives consent when filling out the form if that's where the leads opt-in:***
 
 You can set up a checkbox like this:
 
 By providing your name and contact information, you are expressly consenting to receive communications from COMPANY_NAME or one of their licensed agents, which may include phone calls (including to any wireless number that you provide), including automatic telephone dialing systems or by artificial/pre-recorded messages text message and/or emails for marketing insurance products and services including health, medicare, and life insurance plans. By providing your information, you understand that your consent is not a condition of the purchase of any product or services, and carrier messaging and data rates may apply. You may revoke this consent at any time by calling us at 1-800-000-000 or emailing us at EMAIL_HERE to be placed on our do-not-call list.
 
-### 6. Set-up Unsubscribe Links
+**6. Set-up Unsubscribe Links**
