--- a/Payments/authorize.net-integration-for-processing-payments.mdx
+++ b/Payments/authorize.net-integration-for-processing-payments.mdx
@@ -2,6 +2,7 @@
 title: "Authorize.net integration for processing payments."
 description: "Authorize.Net is considered a competitive payment processor due to its reliability, security, and wide range of features."
 ---
+# Authorize.net integration for processing payments 
 
 Authorize.Net is considered a competitive payment processor due to its reliability, security, and wide range of features. It has operated for over 20 years, providing payment processing services to businesses of all sizes. Authorize.Net provides robust security measures to protect transactions, sensitive customer information, and reliable uptime to ensure smooth transactions. Additionally, Authorize.Net offers features such as recurring billing, mobile compatibility, and integrations with popular e-commerce platforms.,
 
