--- a/Payments/creating-product.mdx
+++ b/Payments/creating-product.mdx
@@ -1,18 +1,18 @@
+
 ---
 title: "Creating Product"
 description: "Learn to add one-time and subscription products to your website's payment section and integrate them into funnels."
----
 
+---
 ## How to manage all your products from one area within the system.
 
 In this video, we're going to learn how to add products (one-time and subscription) to the payments section and use them in funnels.
 
-  [Video Placeholder https://youtu.be/yZs6jRxAnvA](https://youtu.be/yZs6jRxAnvA]
+[Video Placeholder]
 
+### Troubleshooting
 
-## Troubleshooting
-
-### Q1: I'm using websites and do not see a way to add a product:
+**Q1: I'm using websites and do not see a way to add a product:**
 
 To add a product to a website please click on the 3 dots located on the website page where your order form will reside.
 
