--- a/Payments/creating-recurring-invoice.mdx
+++ b/Payments/creating-recurring-invoice.mdx
@@ -1,7 +1,11 @@
+
 ---
+
 title: "Creating Recurring invoice"
 description: "It is a way for your customers to pay you automatically without having to manually enter their payment details every time they buy something from you."
+
 ---
+## How to create recurring Invoices?
 
 You may have heard of the term “recurring billing/invoicing.” It is a way for your customers to pay you automatically without having to manually enter their payment details every time they buy something from you.
 
@@ -9,23 +13,21 @@ This can be very useful if you sell products on a subscription basis; you may wa
 
 This article will show you how to set up and use a simple recurring invoice.
 
-## **What is a recurring invoice?**
+### What is a recurring invoice?
 
 A recurring invoice can be scheduled in advance to send automatically to your customers who bought a recurring service/product. You want to schedule the invoices once and forget it! You!  
 
 **Please Note:**
 >We recommend using Stripe Connect with Invoices, in the event you do not wish to use Stripe Connect payments would need to be manually recorded.
 
-----------
-
-## **How to create a recurring invoice?**
+### How to create a recurring invoice?
 
 -   Open the "**Invoices**" tab under the payments section.
 -   Select "**New Recurring Template**" by clicking New on the All Invoices or Recurring Templates page.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48242263594/original/TQmn_d3a7D8uwbH9z58c-tkWg5blTdSHfw.jpeg?1659351635)
 
-## **Understanding Setting invoice frequency.**
+### Understanding Setting invoice frequency.
 
 The below table explains different cases of setting invoice frequency:  
 
@@ -91,7 +93,7 @@ The below table explains different cases of setting invoice frequency:
 **Please Note:**
 >**Cancelled** and **Completed** invoices can be deleted only if no invoice has been sent out to the customer. **Deleted** recurring templates are not shown in the list view.
 
-## **View sent invoices and their payment status.**
+### View sent invoices and their payment status.
 
 Users can click on Details as shown below to know the invoices sent and their status, which will open the invoices sent and their status as shown in the right panel.
 
@@ -112,7 +114,7 @@ The invoice statuses can also be checked inside the invoice builder once the rec
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48242270433/original/3yHwlPeDig2vOF6FrPPy5P4v8u43zVbGOQ.jpeg?1659353254)
 
-## **FAQ**
+## FAQ
 
 **What is being shown in the list view?**
   
@@ -132,7 +134,6 @@ The table below shows the default notifications sent to the sender and receiver.
 | Invoice payment successful | Sender |
 | Invoice payment failed | Sender |
 
-###   
 **How to stop sending future invoices?**
 
 Active or Scheduled recurring invoices can be stopped from sending out any future invoices from the Recurring Templates list page. Select the End option from the Actions dropdown and confirm the same as shown below:  
@@ -142,18 +143,18 @@ The user also has the option to end the recurring invoice from inside the invoic
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48242281204/original/NPsDsatV9n8c6_fbRfR8AK7NXu1U79iaKA.jpeg?1659355544)
 
-### **Can I modify the price, discount, or taxes from the following occurrence?**
+### Can I modify the price, discount, or taxes from the following occurrence?
 
 No, you can't change the price, discount, or taxes after you have scheduled the recurring invoice.
 
 Although you can individually edit the sent-out invoice and send it over again to the customer for specific instances, there is no way to change this in automation.
 
-### **Can I change the frequency setting of an ongoing recurring invoice?**
+### Can I change the frequency setting of an ongoing recurring invoice?
 
 No, you can't change the frequency settings after you have scheduled the recurring invoice.
  
 
-### **Which products can I add to recurring invoices?**
+### Which products can I add to recurring invoices?
 
 Only  **one-time products  (NOT subscriptions)**  can be added to a recurring invoice. In the case of recurring products, the frequency needs to be defined inside the invoice frequency setting.  
 
