--- a/Payments/how-to-create-coupons-for-products.mdx
+++ b/Payments/how-to-create-coupons-for-products.mdx
@@ -1,7 +1,10 @@
+
 ---
 title: "How to Create Coupons for Products"
 description: "Create coupons for one-time and bump products in V2 Funnels; subscription coupons coming soon."
+
 ---
+## How to Create Coupons for Products 
 
 [Video Placeholder https://youtu.be/MsPp_smXUmI](https://youtu.be/MsPp_smXUmI]
 
@@ -27,11 +30,11 @@ Coupons are great for enticing sales! In this article, we’ll break down the ba
 >
 >- Small text "_Card details will be used for verification purposes**"**_ will appear beside the card element during a **$0 checkout**
 
-## What is a Coupon?
+### What is a Coupon?
 
 A coupon is an offer made by a business or organization (usually in exchange for your payment) where you receive a discount on something you purchase.
 
-## What type of Coupons are supported?
+### What type of Coupons are supported?
 
 There are  two ways  to use a coupon:
 
@@ -48,9 +51,9 @@ There are  two ways  to use a coupon:
 >- Small text "_Card details will be used for verification purposes**"**_ will appear beside the card element during a **$0 checkout**
 
 
-## Capturing coupon transactions
+### Capturing coupon transactions
 
-[Video Placeholder https://www.loom.com/share/21279d0bbabe42f18a1dd714f854595e?sid=433ec050-25c8-49df-beb7-8604eb1f12ad]
+[Video Placeholder]
   
 **Please Note:**
 >1. Coupon application details will be visible in the order details as a line item alongside individual products  
@@ -64,20 +67,20 @@ There are  two ways  to use a coupon:
 >For  **discounts tied to specific products**, the discount will be applicable according to the     sum of the values of those items only and will be distributed according to the weights of     the product values (only one-time products)
 
 
-# FAQ's
+## FAQ's
 
 ### Do coupons apply to all products?
 
 No, Coupons are applicable only on one-time products
 
-### What are the different types of coupons I can create?**
+### What are the different types of coupons I can create?
 
 Two types:
 
 -   **Percentage discount:**  Offer a percentage-based discount on an order value
 -   **Fixed discount:**  Offer fixed discount irrespective of order value
 
-### Are coupon codes unique?**
+### Are coupon codes unique?
 
 Yes, coupon codes are unique and no two coupons can be created with the same coupon code
 
