--- a/Payments/how-to-create-invoices-in-monstro.mdx
+++ b/Payments/how-to-create-invoices-in-monstro.mdx
@@ -1,15 +1,17 @@
+
 ---
+
 title: "How to create invoices in Monstro"
 description: "Invoicing is a very important part of any business. It helps you keep track of your expenses, and it also allows you to get paid for the work that you do."
+
 ---
 ## How to create invoices in Monstro
 
 Invoicing is a very important part of any business. It helps you keep track of your expenses, and it also allows you to get paid for the work that you do. You can easily create invoices from within the system.
 
-In this article, we will cover how to create, edit, discount, add taxes, and send your invoice(s)
+In this article, we will cover how to create, edit, discount, add taxes, and send your invoice(s).
 
-
-## Overview
+### Overview
 
 You can now send invoices to your customers/clients using the **products** that you have created in your sub-account.
 
@@ -18,19 +20,17 @@ You can now send invoices to your customers/clients using the **products** that 
 >
 >The limitation to using invoicing without Stripe Connect is that the user will need to manually record the payments
 
-## How to create a new invoice.
+### How to create a new invoice.
 
 1.  **Go to the Payments tab and click on the Invoice tab**
     
 2.  **Click on the button "New" and start creating a new invoice.**
      ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48295684124/original/o8JIhScbKsJJ4rdKJvjjJiTXG2vCbLNgTw.png?1683126566)
       
-      
-    **Note:**
-    
+ **Note:**
     >**Add Global terms of services/ notes by clicking on the gear wheel icon (orange arrow) next to the "+ New" button** 
 
-## How to edit your invoice info
+### How to edit your invoice info
 
 **Step 1:**  Edit the “from info” by just clicking on the text and it will allow you to edit that information.  
 
@@ -48,14 +48,13 @@ You can now send invoices to your customers/clients using the **products** that 
 **Step 4:**  Click add an item to add the products that you have created on your products tab
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189455786/original/_4cKxr4KtRAx0YNTl2KPA-urzKx0_ffnAg.png?1644590904)
-  
 
 **Step 5: Once you add the product it will allow you to edit the price and edit quantity as well**  
 **
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189492869/original/TkJ3cuE2ZufmAewqLdQoDtZ9pe65giug8A.png?1644595130)
 
-## How to add taxes to your invoice
+### How to add taxes to your invoice
 
 **Step1:**  Click on Tax Settings…  
 ![Click on Tax Settings…](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189495214/original/-r2mTlvPVoWwWEFBjJHOta2cwdBEvmj9rg.png?1644595523) 
@@ -73,15 +72,14 @@ You can now send invoices to your customers/clients using the **products** that 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189495624/original/C4Q95tLGsljhjp2mV8Dutw-0HbYCXAY70g.png?1644595622)
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48190165380/original/5E6d3iPNV1ePefWLE5W9riolA5FTH41tBQ.png?1644875572)  
-  
 
-## How to add a discount to your invoice
+### How to add a discount to your invoice
 
 You can add a discount to this invoice by clicking on the "**add discount**" icon
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189503863/original/cSNM76KK-kDKkqMW9OTm_BkzJ1M6dINjpw.png?1644597092)
 
-## How to send an invoice
+### How to send an invoice
 
 **Step 1:**  Once you create the invoice you can send that to your client using the green button in the top right corner.  
 
@@ -92,14 +90,14 @@ Click on the advanced option to switch to the live and test mode.
   
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48189508144/original/dMdDQH7FdcMqn9kpDzIdmFBwoyGyn2rF9w.png?1644598007)
 
-## How to check the status of your invoices  
+### How to check the status of your invoices  
 
 **Step 1:** Go to the Invoices tab where you will see the list of invoices and their statuses.**
 **Step 2:** You can filter the invoices by status and date range as well**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48295684580/original/a-rTtlcGha6FfQwNGP6l-OG_vK70hsLFwQ.png?1683126642)
 
-## Invoices can also be found in the Transaction tab.
+### Invoices can also be found in the Transaction tab.
 
 You can also look for successful, or failed transactions related to invoices. You can directly open the invoices as well.**Payments > transactions**
 
