--- a/Payments/how-to-manage-refunds-within-the-crm.mdx
+++ b/Payments/how-to-manage-refunds-within-the-crm.mdx
@@ -1,13 +1,16 @@
+
 ---
 title: "How to manage Refunds within the CRM?"
 description: "The refund processing feature allows businesses to issue full or partial refunds for transactions made through various payment providers."
+
 ---
+## How to manage Refunds within the CRM? 
 
 The refund processing feature allows businesses to issue full or partial refunds for transactions made through various payment providers, such as Stripe, Authorize.net, NMI, and PayPal. It supports refunds for Google Pay, Apple Pay, and card payments, providing a convenient way to manage refunds from a single platform.  
 
-## What is the Refunds feature?
+### What is the Refund feature?
 
-[Video Placeholder https://www.loom.com/share/dd77d2ae6fda45aa8c8308fc1d986098?sid=1d1f5a8b-7b86-43fd-a6b7-482fd119db09] 
+[Video Placeholder] 
 
 Our refund processing feature is a convenient tool integrated into our payment platform, allowing businesses to manage refunds for transactions made through multiple payment providers, such as Stripe, Authorize.net, NMI, and PayPal. It supports various payment methods, including Google Pay, Apple Pay, and card payments. The feature allows you to:
 
@@ -28,9 +31,9 @@ The refund processing feature can be beneficial in various usage cases:
 -   **Managing returns and exchanges:** In cases where customers return products or request an exchange, businesses can use the feature to refund the original purchase amount and facilitate a new transaction for the replacement item.
 -   **Offering discounts and promotions:**  Businesses can use the feature to issue partial refunds to customers in cases where a discount or promotional offer was not applied correctly at the time of purchase, ensuring the customer receives the intended savings.
 
-## How to use the Refunds feature?
+### How to use the Refunds feature?
 
-### Supported Payment Providers
+**Supported Payment Providers**
 
 The refund action is available for all payment providers (Stripe, Authorize.net, NMI, and Paypal)
 
@@ -63,7 +66,7 @@ You can edit the pre-populated amount to anything less than the Full amount of t
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48294484252/original/4ptlNfcFsbJmTkA96EalyAH-b4fuOSL6VQ.png?1682492170)
 
-#### Usage cases for Partial Refunds:
+### Usage cases for Partial Refunds:
 
 The partial refund feature can be valuable in various usage cases:
 
@@ -94,7 +97,7 @@ Yes, you can process multiple partial refunds for a single transaction if the cu
 
 Yes, Google Pay and Apple Pay transactions and card payments can be refunded from the platform. This will refund the amount to the bank account associated with the corresponding bank account associated with the Card or Google/Apple account.
 
-### **How long does it take for a refund to be reflected in a customer's account?**
+### How long does it take for a refund to be reflected in a customer's account?
 
 The time it takes for a refund to appear in a customer's account can vary depending on the payment provider and the customer's bank. Generally, the refund may take four to six business days to be reflected in the customer's account.
 
