--- a/Payments/how-to-set-up-a-paypal-integration.mdx
+++ b/Payments/how-to-set-up-a-paypal-integration.mdx
@@ -2,5 +2,6 @@
 title: "How To Set Up A PayPal Integration"
 description: "Set up PayPal integration."
 ---
+# How To Set Up A PayPal Integration 
 
 [Video Placeholder https://youtu.be/Z747CAsEi8E](https://youtu.be/Z747CAsEi8E]
