--- a/Payments/how-to-set-up-the-nmi-integration.mdx
+++ b/Payments/how-to-set-up-the-nmi-integration.mdx
@@ -1,11 +1,14 @@
+
 ---
 title: "How to set up the NMI integration?"
 description: "NMI is secure and efficient online transaction processing across various channels, including websites, mobile apps, and in-person POS systems."
+
 ---
+## How to set up the NMI integration? 
 
 NMI (Network Merchants Inc.) is a well-known payment gateway service provider that offers a variety of solutions for businesses to process online transactions securely and efficiently. NMI's payment gateway allows merchants to accept credit card and eCheck payments from their customers through multiple channels, including websites, mobile apps, and in-person point-of-sale systems.
 
-## What does NMI have to offer?
+### What does NMI have to offer?
 
 Some of the features offered by the NMI payment gateway include the following:
 
@@ -18,11 +21,11 @@ Some of the features offered by the NMI payment gateway include the following:
 8.  Reporting and analytics: NMI's platform provides comprehensive reporting and analytics tools that allow merchants to track and analyze transaction data, helping them make informed business decisions.
 9.  Customer vault: Merchants can securely store their customers' payment information in NMI's customer vault, simplifying the checkout process for returning customers and making it easy to manage recurring payments.
 
-## How can I enable payments via NMI?
+### How can I enable payments via NMI?
 
 NMI integration is currently supported for order forms, invoices, and Text2Pay link payments. These steps can enable the integration:
 
-### Enter the required Gateway ID and API keys with NMI:
+**Enter the required Gateway ID and API keys with NMI:**
 
 Three keys are required to be entered to connect to NMI:
 
