--- a/Payments/send-invoice-to-multiple-contacts-using-templates.mdx
+++ b/Payments/send-invoice-to-multiple-contacts-using-templates.mdx
@@ -2,6 +2,7 @@
 title: "Send Invoice to Multiple Contacts using templates"
 description: "This will enable quick and easy creation of one-time/recurring invoices and will also enable sending invoices in a workflow using the same templates created."
 ---
+# Create invoice templates and automatically send an invoice in a workflow using templates 
 
 -   Businesses will now be able to create invoice templates. This will enable quick and easy creation of one-time/recurring invoices and will also enable sending invoices in a workflow using the same templates created
 -   This needs to be enabled at the sub-account level by heading under Settings -> Labs and turning the toggle on for the feature
