--- a/Social Media Management/google-my-business-publishing-troubleshooting.mdx
+++ b/Social Media Management/google-my-business-publishing-troubleshooting.mdx
@@ -1,12 +1,13 @@
+
 ---
 title: "Google My Business Publishing Troubleshooting"
-description: "Troubleshooting proces of Google My Business"
+description: "Google my business's troubleshooting process"
 ---
-# Google My Business Publishing Troubleshooting
+## Google My Business Publishing Troubleshooting 
 
-## While publishing to GMB, please make sure you do the following:
+### While publishing to GMB, please make sure you do the following:
 
-### 1. Choose the ideal aspect image ratio:
+**1. Choose the ideal aspect image ratio:**
 
 Image can help for social engagement towards your business audience. Google Maps allows you to add images to your list that represent the product to people and how it looks. They have certain recommended practices regarded as an image ratio.
 
@@ -14,15 +15,17 @@ Image can help for social engagement towards your business audience. Google Maps
 -   The picture's size must be between 10 KB to 5MB
 -   The minimum image's resolution should be  **250x250**.
 
-The photo should be related to the product. We would recommend avoiding posting irrelevant photos. 
+The photo should be related to the product. We would recommend avoiding posting irrelevant photos.
 
-### 2. The GMB location must be verified for a post to be successfully published.
+**2. The GMB location must be verified for a post to be successfully published.**
 
 Your post must be successfully published on GMB so that the location is verified. After completing the listing of your location, you must have verified your business location in Google My Business and check the location's status by clicking on the Manage location or in Social Planner, in the section of Type with verified or unverified option.
 
-### 3. Are you posting to a Google My Business listing that has more than 10 locations?
+**3. Are you posting to a Google My Business listing that has more than 10 locations?**
 
-Sadly it is not possible, Google My Business hasn't allowed its users to post more than 10 locations. If you added more than 10 locations then you'll receive a message from the GMB **"This location belongs to a chain. The Local Post API is disabled for this location".**
+Sadly it is not possible, Google My Business hasn't allowed its users to post more than 10 locations. If you added more than 10 locations then you'll receive a message from the GMB 
+
+**"This location belongs to a chain. The Local Post API is disabled for this location".**
 
 This particular error occurs when Google My Business doesn't allow you to post through its API.
 
