--- a/Social Media Management/how-to-connect-to-your-facebook-page.mdx
+++ b/Social Media Management/how-to-connect-to-your-facebook-page.mdx
@@ -1,12 +1,13 @@
+
 ---
-title: "How to connect to your Facebook Page(s)"
-description: "Connect Facebook Page(s) effortlessly through a Social Planner for post publishing and audience engagement."
+title: "How to connect to your Facebook Pages"
+description: "Connect Facebook Pages effortlessly through a Social Planner for post publishing and audience engagement."
 ---
-# How to connect to your Facebook Page(s) 
+## How to connect to your Facebook Pages
 
 **Social Planner**  gives you the ability to add all your fan pages to publish posts and engage with your Facebook audience through a Facebook Page.
 
-## Facebook Page Publishing Setup Guide**
+### Facebook Page Publishing Setup Guide
 
 Following the steps below, you will be able to connect your Facebook pages with the platform.
 
@@ -16,32 +17,31 @@ Following the steps below, you will be able to connect your Facebook pages with 
 
 Due to Facebook's recent API changes, it will no **longer promote posting to Facebook personal profiles, however, you can add pages from different profiles for Social Planner.**
 
-### Step 1. Go to Social Planner > Setting
+**Step 1. Go to Social Planner > Setting**
 
 To get started, please go to Social Planner. In the top right corner of Social Planner, there is a Setting option (Gear icon). Please navigate to Settings by clicking it.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48194300133/original/2DCAFJ87Mo4PnLGFM7pXBldH73B69XvWPg.png?1645733452)
-  
 
-### Step 2. Click on Connect a new page, Facebook Page
+**Step 2. Click on Connect a new page, Facebook Page**
 
 The next step is to click on  **Connect a new Facebook page**  of the table as shown below to manage multiple Facebook Pages.  
   
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48197232583/original/A-gz-wO_FpekkQ8GctZNBUNbwcl0op0kCA.png?1646383426)
 
-### Step 3. Give permissions to fetch Facebook page(s)
+**Step 3. Give permissions to fetch Facebook page(s)**
 
 If you're connecting any profile for the first time, you will have to make sure you give all the permissions to it. Please click Continue to complete the authorization process for fetching the Facebook page(s).
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48194300294/original/M5aicg2aO0Jt7HmivVYhOCtO7ICrCZ87jQ.png?1645733508)
 
-### Step 4. Select Facebook Page(s) to connect
+**Step 4. Select Facebook Page(s) to connect**
 
 It will list all the Facebook pages for this profile, select the list of the ones you wish to connect for Social Planner.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48194300386/original/idLMJiroiLrnkf5XRoC2wWENqdOKYQrWmg.png?1645733550)
 
-### Step 5. Verify your connection
+**Step 5. Verify your connection**
 
 Last but not least, all of the selected pages in the previous step will be listed down showing a successful connection; as shown in the image below.
 
@@ -60,56 +60,3 @@ Facebook has two types of Pages -  **Classic and New Page experience**. If you a
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48249682591/original/2oehzYeZKTaekAuCUZ577AC1b1tUH4V4KQ.png?1662560862)
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48249682113/original/14aE7EFSzV40G1Xll6OzMsI6_N7QE1KY8g.png?1662560766)
-
-How to connect to your Facebook Page(s)
-Social Planner gives you the ability to add all your fan pages to publish posts and engage with your Facebook audience through a Facebook Page.
-
-Facebook Page Publishing Setup Guide**
-Following the steps below, you will be able to connect your Facebook pages with the platform.
-
-If you have already connected your Facebook pages from any profile previously and want to add some new pages, you will have to ‘Remove’ the application from your Facebook Settings > Business Integration section on your Facebook account and follow the steps below all over again as demonstrated in the image below.
-
-To add all your Facebook pages, it is necessary that you have Admin rights. It is mandatory for you to log yourself in with the same profile that has all the pages in which you are an admin.
-
-Due to Facebook’s recent API changes, it will no longer promote posting to Facebook personal profiles, however, you can add pages from different profiles for Social Planner.
-
-Step 1. Go to Social Planner > Setting
-To get started, please go to Social Planner. In the top right corner of Social Planner, there is a Setting option (Gear icon). Please navigate to Settings by clicking it.
-
-
-
-Step 2. Click on Connect a new page, Facebook Page
-The next step is to click on Connect a new Facebook page of the table as shown below to manage multiple Facebook Pages.
-
-
-
-Step 3. Give permissions to fetch Facebook page(s)
-If you’re connecting any profile for the first time, you will have to make sure you give all the permissions to it. Please click Continue to complete the authorization process for fetching the Facebook page(s).
-
-
-
-Step 4. Select Facebook Page(s) to connect
-It will list all the Facebook pages for this profile, select the list of the ones you wish to connect for Social Planner.
-
-
-
-Step 5. Verify your connection
-Last but not least, all of the selected pages in the previous step will be listed down showing a successful connection; as shown in the image below.
-
-Following these instructions, you can add as many pages as you wish from the same or different Facebook profiles.
-
-
-
-
-
-
-
-Facebook has two types of Pages - Classic and New Page experience. If you are using the Classic page, please follow the above flow. If you are using New Page Experience, they will be required to add access to the following role:
-
-
-
-
-
-
-
-Markdown 4000 bytes 426 words 60 lines Ln 60, Col 0HTML 1920 characters 407 words 19 paragraphs
