--- a/Social Media Management/how-to-connect-to-your-linkedIn-profile-and-page.mdx
+++ b/Social Media Management/how-to-connect-to-your-linkedIn-profile-and-page.mdx
@@ -1,34 +1,35 @@
----
-title: "How to connect to your LinkedIn Profile(s) and Page(s)?"
-description: "Connect the LinkedIn Profile and Page(s)."
----
-# How to connect to your LinkedIn Profile(s) and Page(s)? 
 
-## Connect LinkedIn Profile and Page(s)
+---
+title: "How to connect to your LinkedIn Profiles and Pages?"
+description: "Connect the LinkedIn Profile and Pages"
+---
+## How to connect to your LinkedIn Profiles and Pages? 
 
-### Step 1: The first step is to log into the sub-account and go to  Marketing, click on the  Social Planner.
+### Connect LinkedIn Profile and Page(s)
+
+**Step 1: The first step is to log into the sub-account and go to  Marketing, click on the  Social Planner.**
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183050/original/ayjYr0pU-zR8jZ_Xn62FdNa4p7Fdp2IiYg.jpeg?1653463965)
 
-###   Step 2:  On Visiting Social Planner, there will be a wizard with a connect option, or after visiting the overview of Social Planner will have a Setting option (gear icon)
+**Step 2:  On Visiting Social Planner, there will be a wizard with a connect option, or after visiting the overview of Social Planner will have a Setting option (gear icon)**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183049/original/rcjHMQzFjRujzQe8FLd3CewFR9eQMtjeHQ.png?1653463965)
 
-### Step 3: After clicking the Add LinkedIn Profile/Page(s), there will be an option to add them.
+**Step 3: After clicking the Add LinkedIn Profile/Page(s), there will be an option to add them.**
 
 **Note**
 >Make sure that your personal LinkedIn account is a Super admin of the Page you want to add to Social Planner.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183051/original/7N8PK_S_BGwrdrEglSRIoBLY0RSmsIafZw.jpeg?1653463966)
 
-### Step 4: If you are connecting it first time inside Social Planner, you will be required to provide the permissions for the social planner.
+**Step 4: If you are connecting it for the first time inside Social Planner, you will be required to provide the permissions for the Social Planner.**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183054/original/cg763FqSNjcr_voudor_x4mDSAzs22hIlw.jpeg?1653463966)
 
-### Step 5: Next step is to choose the LinkedIn Profile and Page(s) for the social planner
+**Step 5: The next step is to choose the LinkedIn Profile and Page(s) for the social planner**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48228183052/original/dYE-BQXKnDSFZSr713fKO0PpbZioeLmFyg.png?1653463966)
 
-### Step 6:  You can manage the accounts from the Setting Icon
+**Step 6:  You can manage the accounts from the Setting Icon**
 
 ## FAQ
 
