--- a/Social Media Management/how-to-customize-posts-for-each-social.mdx
+++ b/Social Media Management/how-to-customize-posts-for-each-social.mdx
@@ -1,12 +1,13 @@
+
 ---
 title: "How to Customize posts for each social?"
 description: "The experience unparalleled flexibility in crafting unique messages for each social network with a simple toggle."
 ---
-# How to Customize posts for each social? 
+## How to Customize posts for each social? 
 
 Revolutionize social media marketing with our new 'Customize for Each Post' feature. Tailor your content for different platforms, effortlessly overcoming character limitations, and manage diverse campaigns all in one place. Experience unparalleled flexibility in crafting unique messages for each social network with a simple toggle.
 
-## What is the "Customize for Each Post" Feature?
+### What is the "Customize for Each Post" Feature?
 
 [Video Placeholder https://www.loom.com/share/6418824c52564179b0656ac5a49d3a2b?sid=d61cfe5b-c9bd-4eae-a803-e12ea9bb7631]
   
@@ -68,8 +69,7 @@ Example: They could use the "Customize for Each Post" feature to create channel-
 
 **Example:**  They could use Instagram to showcase video tutorials within 2,200 characters, LinkedIn for behind-the-scenes company insights, and Twitter for quick shoutouts and engagement with fans.
 
-
-## How to use this feature?
+### How to use this feature?
 
 **Navigate to the Marketing Section:**
 
@@ -96,7 +96,6 @@ Once you've selected the social media channels you want to post on, you'll see a
 By toggling this on, you can create unique content for each platform, considering their character limitations.
   
 **Craft Your Custom Content:**
-
 
 Write your content for each channel, making sure to adhere to the specific character limits for each platform (e.g., 5,000 for Facebook, 280 for Twitter, 1,500 for GMB, etc.).
 
@@ -142,7 +141,6 @@ Confirm and review all details to ensure accuracy and consistency across platfor
 >![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155005177120/original/-2ntwlxNMYpzQZYt2ekAmKg8YdNiz6tViQ.png?1692035967)
 
 By following these steps, you can utilize the "Customize for Each Post" feature to create personalized and platform-specific content for different social media channels, maximizing your reach and engagement. It's an efficient way to manage diverse campaigns and tailor messages to resonate with each platform's unique audience.
-
 
 ## FAQs
 
