--- a/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
+++ b/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
@@ -1,12 +1,13 @@
+
 ---
 title: "How to post Recurring Social Posts through the Social Planner?"
 description: "Take control of your content strategy by utilizing this feature, but be mindful of platforms like Twitter, which may flag repetitive content."
 ---
-# How to post Recurring Social Posts through the Social Planner? 
+## How to post Recurring Social Posts through the Social Planner? 
 
 Recurring posts provide a streamlined way to create evergreen content across various social platforms, scheduled daily, weekly, monthly, or yearly. Through a simple process, users can generate quality content using AI, schedule it with flexible time settings, and even edit parent and child posts. Take control of your content strategy by utilizing this feature, but be mindful of platforms like Twitter, which may flag repetitive content.
 
-## What is this feature?
+### What is this feature?
 
 [Video Placeholder https://www.loom.com/share/b840a7d40b3b45cb8dd551f32bb67495?sid=cf7370e2-e00c-4473-baf0-3135f4ad184c]
 
@@ -55,8 +56,6 @@ The recurring posts feature empowers users to take a proactive and automated app
 **Compliance and Regular Announcements:**  In industries where regular compliance updates or announcements are necessary, recurring posts can ensure that the necessary information is shared with stakeholders at the required intervals.
 
 **Celebrating Historical Milestones:**  Museums, historical societies, or educational institutions can use this feature to share historical facts or milestones on the corresponding dates, providing educational content to their followers.
-
-
 
 ## How to use this feature?
 
@@ -141,7 +140,7 @@ A: Editing the parent post will replicate the changes in child-scheduled posts. 
 
 A: Yes, you can include various media types, such as images, videos, or GIFs, within the recurring posts to make them more engaging.
 
-### **Q: How does the recurring post feature interact with different time zones?**
+### Q: How does the recurring post feature interact with different time zones?
 
 A: You'll need to set the time for your recurring posts considering the time zone of your target audience. Be mindful of global audiences if applicable.
 
