--- a/Calendar/display-multiple-calendars-for-calendars-under-the-unassigned-section-only.mdx
+++ b/Calendar/display-multiple-calendars-for-calendars-under-the-unassigned-section-only.mdx
@@ -1,9 +1,13 @@
+
 ---
-title: "Display Multiple Calendars (For calendars under the Unassigned section only)"
-description: "Showing the multiple calendars (Unassigned section only)."
+title: "Display Multiple Calendars. This is for calendars under the Unassigned section only."
+description: "Showing the multiple calendars in the unassigned section only."
+
 ---
 
-## How to display more than one calendar on a page
+## Display Multiple Calendars (For calendars under the Unassigned section only) 
+
+### How to display more than one calendar on a page?
 
 **Video Overview:**
 [Video Placeholder]
@@ -20,14 +24,14 @@ description: "Showing the multiple calendars (Unassigned section only)."
 
 1. Go to Settings > Appointment Widget and copy the embed code from the first calendar
 
-3. Go to the funnel page, add a "Custom JS/HTML" element, click "Open Code Editor", and paste the calendar embed code.
+2. Go to the funnel page, add a "Custom JS/HTML" element, click "Open Code Editor", and paste the calendar embed code.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48028731607/original/O98ivJb2-YuppRZs1LjzSof-zzL4IgZELg.gif?1582551394)
 
 3. In a new tab, go back to Settings > Appointment Widget, change the calendar name dropdown to the second calendar, and copy the calendar ID from that calendar
-4. 
-5. Go back to the funnel page tab that has your Custom JS/HTML element code editor open, add a comma after the calendar ID, paste the second calendar ID, and then hit "Yes, save."
+
+4. Go back to the funnel page tab that has your Custom JS/HTML element code editor open, add a comma after the calendar ID, paste the second calendar ID, and then hit "Yes, save."
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48028732907/original/OOszXMmvEULTeK8eAXfOZvVv6lsRwF2CKg.gif?1582551763)
 
-7. Save your funnel page and preview.
+5. Save your funnel page and preview.
