--- a/Calendar/how-to-set-up-a-calendar-for-classes.mdx
+++ b/Calendar/how-to-set-up-a-calendar-for-classes.mdx
@@ -1,12 +1,14 @@
+
 ---
 title: "How to set up a Calendar for Classes?"
 description: "Class Calendars are designed to manage one-to-many events where multiple invitees can attend a single booking."
+
 ---
+## How to set up a Calendar for Classes?
 
 Class Calendars are designed to manage one-to-many events where multiple invitees can attend a single booking. These calendars are ideal for webinars, workshops, training sessions, and sports events. In a Class Calendar, there can only be one appointment owner, typically the trainer or host. The number of spots per slot can be set, with a maximum limit of 9,999 attendees, though meeting location limitations do apply.
 
-
-## **What is a Class Booking?  
+### What is a Class Booking?  
 
 [Video Placeholder]
 
@@ -16,7 +18,7 @@ Webinars/Workshops
 Training Sessions
 Sports Events
 
-### **Why use Class Booking Calendars?**
+### Why use Class Booking Calendars?
 
 Using Class Calendars offers several benefits for managing events with multiple attendees, such as:
 
@@ -26,17 +28,15 @@ Using Class Calendars offers several benefits for managing events with multiple 
 -   Enhanced communication: Class Calendars facilitate better communication with attendees by providing a clear overview of event details, such as date, time, and location. This helps reduce confusion and the likelihood of no-shows.
 -   Time-saving: By automating the booking process and providing options for attendees to cancel or reschedule their appointments, Class Calendars save time for both the organizer and the attendees.
 
-## **How to set up a Calendar for Class Bookings?**
+### How to set up a Calendar for Class Bookings?
 
 1. Within your Sub-Account, head to  **Settings**
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288871055/original/Zg60qvj69l-BteAAOsX1cGzBys6AUUdJ-Q.png?1679568927)
-
   
 2. Click on  **Calendars**
 
 ![Step 2 screenshot](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288870288/original/NttLuAI20Vgpdp6f-HzLsJNCtL4Mj3_cEw.png?1679568811)
-
 
 **3. Click on Create Calendar**
 
@@ -46,13 +46,12 @@ Using Class Calendars offers several benefits for managing events with multiple 
 
 ![Step 4 screenshot](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288870287/original/CR_YnA6cNwp2TSp0RiZPPB4-0fRX_9Zp1g.png?1679568810)
 
-**5. At least One Team Member needs to be added before the calendar can be saved**
+**5. At least one Team Member needs to be added before the calendar can be saved**
 
 In the case of a class or a training session, the appointment owner would be the trainer. You can add the appointment owner by clicking Add User and selecting the User from the dropdown list. , UserUser
 
 **Please Note:**
-
-> You can select only one Appointment Owner for a Class Booking calendar.
+>You can select only one Appointment Owner for a Class Booking calendar.
 
 ![Step 5 screenshot](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288870281/original/RSQdEqjyIlIjUABR2o1VHLG76iDliBPN2g.png?1679568810)
 
@@ -65,8 +64,9 @@ In the case of a class or a training session, the appointment owner would be the
 ![Step 7 screenshot](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288870284/original/J3b-bPzsXyM-HAXqWZQihlTkNVWlggEpFQ.png?1679568810)  
 
 **8. Enter a Calendar URL Slug**
+ 
 **Please Note:**
-> This must be a unique slug that is not being used for another Calendar.
+>This must be a unique slug that is not being used for another Calendar.
 
 ![Step 8 screenshot](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288870282/original/99VG0EsgfceI7xa42vqIWX1PkW7BlJzgCQ.png?1679568810)
 
@@ -90,7 +90,7 @@ For example, if you set the maximum number of seats per slot to 10, then up to 1
 
 You can choose up to a maximum of 9,999 attendees in a single slot; however, if you use a conferencing tool, the tool may have a different maximum attendees limit. For example, Zoom offers a maximum of 500 attendees for certain licenses. specific
 
-## **Cancellation and Rescheduling**
+## Cancellation and Rescheduling
 
 To cancel a class booking, open the appointment and click  **"Cancel All."**  To reschedule the meeting, click "**Reschedule All,"**  which would reschedule the appointment for all the attendees.
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288875998/original/BZhPs5V9nOruTot-Ps0Dc6I_vtEIB83gsQ.png?1679569846)
@@ -100,27 +100,26 @@ To cancel or reschedule the appointment for a particular attendee, click on the 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48288876324/original/mUN4rPbXaVOwzx0WHVpMbERYy5sMjMuVBw.png?1679569923)
 
 **Please Note**
-> In case you are have third-party calendars like Google Calendar or Outlook integrated with the CRM's calendar then in that case, the class booking would show each appointment separately in your   Google or Outlook calendar.   
+>In case you have third-party calendars like Google Calendar or Outlook integrated with the CRM's calendar then in that case, the class booking would show each appointment separately in your   Google or Outlook calendar.   
   
-> **Example**: If you have created a class booking with a capacity of 5 attendees then on the Google or Outlook calendar they would appear as 5 separate events at the same time.   
+>**Example**: If you have created a class booking with a capacity of 5 attendees then on the Google or Outlook calendar they would appear as 5 separate events at the same time.   
   
 >The meeting location for Class Booking, as of now is restricted to Custom. This would be removed shortly.
 
+## FAQs
 
-## **FAQs**
-
-### **Question: How can I cancel or reschedule a class appointment?**
+### Question: How can I cancel or reschedule a class appointment?
 
 Answer: To cancel or reschedule the class booking, you can go to calendars, click on the class booking you want to modify, and you able to see the option to edit/change the appointment.,
 
-### **Question: Can I cancel or reschedule a class appointment for a single attendee?**
+### Question: Can I cancel or reschedule a class appointment for a single attendee?
 
 Answer: Yes, for class appointments, you can click the options menu next to the contact, where you can see the option to cancel or reschedule the appointment for specific contacts.,
 
-### **Question: Can I book a class appointment with contacts directly?**
+### Question: Can I book a class appointment with contacts directly?
 
 Answer: Yes, you can do that; click on the "book appointment" button and select the contact you want to book the appointment with. Then select the calendar (choose the class booking calendar here), select the slot, and then proceed to book the appointment. to select
 
-### **Question: Can attendees cancel/reschedule a Class Booking appointment?**
+### Question: Can attendees cancel/reschedule a Class Booking appointment?
 
 Answer: To allow attendees to cancel/reschedule the class booking appointment, enable the option for "Allow Cancellation" and "Allow Reschedule" in the Confirmation Tab in Calendar Settings.
