--- a/Emails/why-are-my-emails-going-to-spam.mdx
+++ b/Emails/why-are-my-emails-going-to-spam.mdx
@@ -1,10 +1,12 @@
+
 ---
 title: "Why Are My Emails Going To Spam?"
 description: "The common issue is sending from a public domain (e.g., gmail.com, yahoo.com). Ensure you send emails from a domain you own to avoid this, matching your branding."
----
-# Why Are My Emails Going To Spam? 
 
-## There are many reasons that mailbox providers could flag your email as spam.
+---
+## Why Are My Emails Going To Spam? 
+
+### There are many reasons that mailbox providers could flag your email as spam.
 
 Here are the most common reasons we see and how to fix them!
 
