--- a/Payments/text-to-pay-links.mdx
+++ b/Payments/text-to-pay-links.mdx
@@ -1,19 +1,22 @@
+
 ---
 title: "Text-To-Pay Links"
 description: "Create Payment Links by integrating the sub-account with Stripe."
+
 ---
-aa
-[Video Placeholder https://youtu.be/2UJLhrrWANM]
+## Text-To-Pay Links 
 
-# To create Payment Links:
+[Video Placeholder]
 
-## Step 1 - Integrate Sub-Account With Stripe:
+## To create Payment Links:
+
+### Step 1 - Integrate Sub-Account With Stripe:
 
 Integrate the sub-account with Stripe by going to Settings Payments click the "Connect Your Stripe Account" button and follow the steps to integrate Stripe.
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48158658694/original/jKa6DexPIDteShRvRWnP_gIMB_6rueBHmg.png?1636734598) 
 
-## Step 2 - Create An Invoice From A Conversation:
+### Step 2 - Create An Invoice From A Conversation:
 
 Go to a conversation and click the payment icon below the text editor. In the modal that pops up, give the Invoice a name, and price, and then set a Link Expiration/Due Date and hit Save. The payment link will then appear in the conversation editor.
 
